force-app/main/default/objects/State__c/State__c.object-meta.xml
<CustomObject>
    <description>State related data for defining finance baselines and panels</description>
    <label>State</label>
    <nameField>
        <label>State Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>States</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>