force-app/main/default/objects/State__c/fields/Auto_Recommend_Battery__c.field-meta.xml
<CustomField>
    <fullName>Auto_Recommend_Battery__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the inclusion of a battery is recommended based on utility or state policies.</description>
    <inlineHelpText>Checked if the inclusion of a battery is recommended based on utility or state policies.</inlineHelpText>
    <label>Auto Recommend Battery</label>
    <type>Checkbox</type>
</CustomField>