force-app/main/default/objects/State__c/fields/Cash_Base_PPW__c.field-meta.xml
<CustomField>
    <fullName>Cash_Base_PPW__c</fullName>
    <label>Cash Base PPW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>