force-app/main/default/objects/State__c/fields/Cash_Battery__c.field-meta.xml
<CustomField>
    <fullName>Cash_Battery__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cash Battery</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>States (Cash Battery)</relationshipLabel>
    <relationshipName>States_Cash_Battery</relationshipName>
    <type>Lookup</type>
</CustomField>