force-app/main/default/objects/State__c/fields/Cash_Margin__c.field-meta.xml
<CustomField>
    <fullName>Cash_Margin__c</fullName>
    <label>Cash Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>