force-app/main/default/objects/State__c/fields/Cash_Panel__c.field-meta.xml
<CustomField>
    <fullName>Cash_Panel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cash Panel</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Product must be a Panel record type</errorMessage>
        <filterItems>
            <field>Product2.RecordType.Name</field>
            <operation>equals</operation>
            <value>Panel</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>States (Cash Panel)</relationshipLabel>
    <relationshipName>States_Cash_Panel</relationshipName>
    <type>Lookup</type>
</CustomField>