force-app/main/default/objects/State__c/fields/Cash_PPW__c.field-meta.xml
<CustomField>
    <fullName>Cash_PPW__c</fullName>
    <formula>IF( Cash_Base_PPW__c +  Cash_Margin__c &gt;0, Cash_Base_PPW__c +  Cash_Margin__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Cash Base + Cash Margin</inlineHelpText>
    <label>Cash PPW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>