force-app/main/default/objects/State__c/fields/Cash_Preferred__c.field-meta.xml
<CustomField>
    <fullName>Cash_Preferred__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Preferred Cash option pricing cube for cash purchases</description>
    <label>Cash (Preferred)</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Cash record type required</errorMessage>
        <filterItems>
            <field>Pricing_Cube__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Cash</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Pricing_Cube__c</referenceTo>
    <relationshipLabel>States (Cash Preferred)</relationshipLabel>
    <relationshipName>States_Cash_Preferred</relationshipName>
    <type>Lookup</type>
</CustomField>