force-app/main/default/objects/State__c/fields/Cash_Product__c.field-meta.xml
<CustomField>
    <fullName>Cash_Product__c</fullName>
    <formula>Cash_Preferred__r.Description__c</formula>
    <label>Cash Product</label>
    <type>Text</type>
</CustomField>