force-app/main/default/objects/State__c/fields/Competitor_Cash_PPW__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Cash_PPW__c</fullName>
    <description>Average Base PPW charged by our competitors</description>
    <inlineHelpText>Average Base PPW charged by our competitors</inlineHelpText>
    <label>Competitor Cash PPW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>