force-app/main/default/objects/State__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <formula>IF(
    AND(
        TODAY() &gt;= Start_Date__c,
        OR(
            ISBLANK(End_Date__c),
            TODAY() &lt;= End_Date__c
        )
    ),
    true,
    false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is today&apos;s date between the Start and End Date?</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>