force-app/main/default/objects/State__c/fields/Loan_Competitor_Product__c.field-meta.xml
<CustomField>
    <fullName>Loan_Competitor_Product__c</fullName>
    <formula>Loan_Competitor__r.Description__c</formula>
    <label>Loan Competitor Product</label>
    <type>Text</type>
</CustomField>