force-app/main/default/objects/State__c/fields/Loan_Margin__c.field-meta.xml
<CustomField>
    <fullName>Loan_Margin__c</fullName>
    <label>Loan Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>