force-app/main/default/objects/State__c/fields/Loan_PPW__c.field-meta.xml
<CustomField>
    <fullName>Loan_PPW__c</fullName>
    <formula>IF( Loan_Base_PPW__c + Loan_Margin__c &gt; 0, Loan_Base_PPW__c + Loan_Margin__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Loan Base + Loan Margin</inlineHelpText>
    <label>Loan PPW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>