force-app/main/default/objects/State__c/fields/Loan_Preferred__c.field-meta.xml
<CustomField>
    <fullName>Loan_Preferred__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan (Preferred)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Pricing_Cube__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Loan</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Pricing_Cube__c</referenceTo>
    <relationshipLabel>States (Loan Preferred)</relationshipLabel>
    <relationshipName>States_Loan_Preferred</relationshipName>
    <type>Lookup</type>
</CustomField>