force-app/main/default/objects/State__c/fields/Loan_Product__c.field-meta.xml
<CustomField>
    <fullName>Loan_Product__c</fullName>
    <formula>Loan_Preferred__r.Description__c</formula>
    <label>Loan Product</label>
    <type>Text</type>
</CustomField>