force-app/main/default/objects/State__c/fields/State_Long_Name__c.field-meta.xml
<CustomField>
    <fullName>State_Long_Name__c</fullName>
    <description>Complete name for the state. Populated via Trigger.</description>
    <label>State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>