force-app/main/default/objects/State__c/fields/TPO_Base_PPW__c.field-meta.xml
<CustomField>
    <fullName>TPO_Base_PPW__c</fullName>
    <label>TPO Base PPW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>