force-app/main/default/objects/State__c/fields/TPO_Battery__c.field-meta.xml
<CustomField>
    <fullName>TPO_Battery__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TPO Battery</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.RecordType.Name</field>
            <operation>equals</operation>
            <value>Battery</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>States (TPO Battery)</relationshipLabel>
    <relationshipName>States_TPO_Battery</relationshipName>
    <type>Lookup</type>
</CustomField>