force-app/main/default/objects/State__c/fields/TPO_Financier__c.field-meta.xml
<CustomField>
    <fullName>TPO_Financier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TPO Financier</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Account must be a Financier Record Type</errorMessage>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Financier</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>States TPO</relationshipLabel>
    <relationshipName>States_TPO</relationshipName>
    <type>Lookup</type>
</CustomField>