force-app/main/default/objects/State__c/fields/TPO_Panel__c.field-meta.xml
<CustomField>
    <fullName>TPO_Panel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>NOTE: This is field is required, with the associated Production from the Product, in order for a TPO product to show on the online estimate page.</inlineHelpText>
    <label>TPO Panel</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Product must be a &quot;Panel&quot; record type</errorMessage>
        <filterItems>
            <field>Product2.RecordType.Name</field>
            <operation>equals</operation>
            <value>Panel</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>States (TPO Panel)</relationshipLabel>
    <relationshipName>States_TPO</relationshipName>
    <type>Lookup</type>
</CustomField>