force-app/main/default/objects/State__c/fields/TPO_PPW__c.field-meta.xml
<CustomField>
    <fullName>TPO_PPW__c</fullName>
    <formula>IF(TPO_Base_PPW__c + TPO_Margin__c &gt; 0, TPO_Base_PPW__c + TPO_Margin__c, null)</formula>
    <inlineHelpText>TPO Base + TPO Margin</inlineHelpText>
    <label>TPO PPW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>