force-app/main/default/objects/State__c/fields/TPO_Type__c.field-meta.xml
<CustomField>
    <fullName>TPO_Type__c</fullName>
    <label>TPO Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lease</fullName>
            </value>
            <value>
                <fullName>PPA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>