force-app/main/default/objects/State__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Auto_Recommend_Battery__c</columns>
    <columns>TPO_Type__c</columns>
    <columns>TPO_Base_PPW__c</columns>
    <columns>TPO_PPW__c</columns>
    <columns>TPO_Panel__c</columns>
    <columns>TPO_Battery__c</columns>
    <columns>Loan_Panel__c</columns>
    <columns>Cash_Panel__c</columns>
    <columns>Cash_Battery__c</columns>
    <columns>Loan_Battery__c</columns>
    <columns>Loan_Competitor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Active Records</label>
</ListView>