force-app/main/default/objects/State__c/listViews/Panel_Updates.listView-meta.xml
<ListView>
    <fullName>Panel_Updates</fullName>
    <columns>NAME</columns>
    <columns>TPO_Financier__c</columns>
    <columns>TPO_Panel__c</columns>
    <columns>Cash_Panel__c</columns>
    <columns>Loan_Panel__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>State_Long_Name__c</field>
        <operation>notEqual</operation>
        <value>PR</value>
    </filters>
    <label>Panel Updates</label>
</ListView>